<resources>

    <string name="app_name">씨네마천국</string>

    <string name="gallery_label">사진 보기</string>
    <string name="comment_list_label">한줄평목록</string>
    <string name="comment_write_label">한줄평작성</string>

    <string name="movie_title">군도</string>
    <string name="movie_story">…</string>
    <string name="release_date">2014.07.23</string>
    <string name="genre">액션</string>
    <string name="running_time">137</string>

    <string name="open">개봉</string>
    <string name="slash">/</string>
    <string name="minute">분</string>
    <string name="reservation_rate">예매율</string>
    <string name="ranking">위</string>
    <string name="percentage">%</string>
    <string name="grade">평점</string>
    <string name="cumulative_audience">누적관객수</string>
    <string name="count">명</string>
    <string name="story">줄거리</string>
    <string name="director_and_casting">감독/출연</string>
    <string name="director">감독</string>
    <string name="casting">출연</string>
    <string name="gallery">갤러리</string>
    <string name="comment">한줄평</string>
    <string name="see_all">모두보기</string>
    <string name="write">작성하기</string>
    <string name="reservation">예매하기</string>
    <string name="watch_age">세 관람가</string>
    <string name="d_day">D-</string>

    <!-- Menu text -->
    <string name="menu_order_text">예매율순</string>
    <string name="menu_order1_text">예매율순</string>
    <string name="menu_order2_text">큐레이션</string>
    <string name="menu_order3_text">상영예정</string>

    <!-- Menu click text -->
    <string name="menu_click_text1">정렬메뉴1 선택됨</string>
    <string name="menu_click_text2">정렬메뉴2 선택됨</string>
    <string name="menu_click_text3">정렬메뉴3 선택됨</string>

    <!-- comment_item_view.xml -->
    <string name="recommend">추천</string>
    <string name="separator">|</string>
    <string name="report">신고하기</string>

    <!-- activity_comment_write.xml -->
    <string name="input_rating_text">평점을 입력해 주세요</string>
    <string name="input_edit_text_hint">100자 이내로 작성해주세요.</string>
    <string name="save">저장</string>
    <string name="cancel">취소</string>
    <string name="left_braket">(</string>
    <string name="right_braket">명 참여)</string>

    <!-- Intent key text -->
    <string name="movie_name_text">movieName</string>
    <string name="comment_list_text">commentList</string>
    <string name="movie_rating_text">movieRating</string>
    <string name="movie_contents_text">movieContents</string>
    <string name="movie_grade_text">movieGrade</string>

    <!-- Toast text -->
    <string name="comment_write_cancel_text">한줄평작성 화면에서 돌아왔습니다.</string>
    <string name="comment_list_cancel_text">한줄평목록 화면에서 돌아왔습니다.</string>
    <string name="comment_empty_text">한줄평을 100자 이내로 작성해주세요</string>

    <string name="title_activity_movie_list">MovieListActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- Navigation drawer -->
    <string name="nav_header_title">윤병관</string>
    <string name="nav_header_subtitle">pk7955@naver.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- Menu text -->
    <string name="menu_movie_list">영화 목록</string>
    <string name="menu_movie_detail">영화 상세</string>
    <string name="menu_movie_api">영화 API</string>
    <string name="menu_movie_book">예매하기</string>
    <string name="menu_settings">설정</string>
    <string name="menu_user_settings">사용자 설정</string>

    <string name="see_detail">상세보기</string>
    
    <!-- Bundle text -->
    <string name="bun_id">ID</string>
    <string name="bun_img">BIG_POSTER</string>
    <string name="bun_title">TITLE</string>
    <string name="bun_reserv_rate">RESERVATION_RATE</string>
    <string name="bun_grade">WATCHING_AGE</string>
    <string name="bun_day">D_DAY</string>
    <string name="bun_pos">POSITION</string>

    <!-- Tag text -->
    <string name="tag">MovieApp</string>
    <string name="tag_comment_item_view">COMMENT_ITEM_VIEW</string>

    <string name="mov_id">movie_id</string>
    <string name="mov_title">movieName</string>
    <string name="mov_rating">movieRating</string>
    <string name="mov_grade">movieGrade</string>

    <!-- Comment text -->
    <string name="comm_id">id</string>
    <string name="comm_review_id">review_id</string>
    <string name="comm_writer">writer</string>
    <string name="comm_time">time</string>
    <string name="comm_rating">rating</string>
    <string name="comm_cont">contents</string>

    <!-- Like/dislike text -->
    <string name="post_like">likeyn</string>
    <string name="post_dislike">dislikeyn</string>

    <!-- Message -->
    <string name="msg_empty">한줄평을 100자 이내로 작성해주세요</string>
    <string name="msg_net_ok">인터넷이 연결되어 있습니다.\n데이터베이스에 저장함</string>
    <string name="msg_net_fail">인터넷이 연결되어 있지 않습니다.\n데이터베이스로부터 로딩함</string>
    <string name="msg_req_net">인터넷이 연결되어 있지 않습니다\n인터넷 연결 후 작성해주세요.</string>
    <string name="msg_no_data">데이터가 존재하지 않습니다.</string>
    <string name="msg_service_not_ready">서비스 준비중입니다.</string>

    <!-- Video -->
    <string name="video_check_text">youtu.be</string>

    <string name="comma">,</string>

    <string name="time_pattern">yyyy-MM-dd HH:mm:ss</string>

    <!-- Gallery url text -->
    <string name="gallery_url">galleryUrl</string>

    <!-- Retrofit -->
    <string name="base_url">http://boostcourse-appapi.connect.or.kr:10000</string>

    <!-- Database -->
    <string name="db_name">movie-db</string>

</resources>
