<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="activity"
            type="ybk.org.movieapp.CommentWriteActivity" />

    </data>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:padding="@dimen/base_padding_size">

            <TextView
                android:id="@+id/tv_movie_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="군도"
                android:textSize="@dimen/title_text_size"
                android:layout_marginEnd="@dimen/base_padding_size" />

            <ImageView
                android:id="@+id/iv_movie_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_15"/>

        </LinearLayout>

        <View style="@style/MidThinLineHorizontal" />

        <RatingBar
            android:id="@+id/rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:numStars="5"
            android:stepSize="0.1"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/base_padding_size"
            android:layout_marginBottom="@dimen/base_padding_size" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/input_rating_text"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/base_padding_size" />

        <EditText
            android:id="@+id/et_contents"
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:background="@drawable/rect_shape_yellow"
            android:hint="@string/input_edit_text_hint"
            android:maxLength="100"
            android:textCursorDrawable="@color/colorPrimaryDark"
            android:gravity="top|left"
            android:layout_gravity="center_horizontal"
            android:padding="@dimen/base_padding_size"
            android:layout_marginStart="@dimen/base_padding_size"
            android:layout_marginEnd="@dimen/base_padding_size"
            android:layout_marginBottom="@dimen/base_padding_size" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="right|center_vertical">

            <Button
                android:id="@+id/btn_save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/rect_shape_purple"
                android:text="@string/save"
                android:textColor="#611F91"
                android:onClick="@{(v) -> activity.onClickSaveButton()}"/>

            <Button
                android:id="@+id/btn_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/rect_shape_purple"
                android:text="@string/cancel"
                android:textColor="#611F91"
                android:layout_marginStart="@dimen/base_padding_size"
                android:layout_marginEnd="@dimen/base_padding_size"
                android:onClick="@{(v) -> activity.onClickCancelButton()}"/>
        </LinearLayout>

    </LinearLayout>

</layout>