<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="commentItem"
            type="ybk.org.movieapp.adapter.CommentItem" />
    </data>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/base_padding_size">

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="10dp"
            android:src="@drawable/img_user"
            app:civ_border_width="2dp"
            app:civ_border_color="#FFCCCCCC"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_user_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{commentItem.writer}"
                android:textSize="12sp"
                android:textStyle="bold"
                android:textColor="#000000"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical">

                <TextView
                    android:id="@+id/tv_register_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{commentItem.registerTime}"
                    android:textColor="#7D7D7D"
                    android:layout_marginEnd="@dimen/base_padding_size"/>

                <RatingBar
                    android:id="@+id/rating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:rating="@{commentItem.rating}"
                    android:theme="@style/RatingBarTheme"
                    style="?android:ratingBarStyleSmall" />

            </LinearLayout>

            <TextView
                android:id="@+id/tv_comment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{commentItem.comment}"
                android:textColor="#000000"
                android:layout_marginTop="@dimen/base_padding_size"
                android:layout_marginBottom="@dimen/base_padding_size" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/recommend"
                    android:textColor="#000000"
                    android:layout_marginEnd="@dimen/base_padding_size" />

                <TextView
                    android:id="@+id/tv_recommend_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{String.valueOf(commentItem.recommendCount)}"
                    android:textColor="#000000"
                    android:layout_marginEnd="@dimen/base_padding_size" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/separator"
                    android:textColor="#7D7D7D"
                    android:layout_marginEnd="@dimen/base_padding_size" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/report"
                    android:textColor="#7D7D7D" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</layout>
